<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".quiz.CategoryActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:elevation="4dp"
        android:gravity="center|center_horizontal"
        app:cardUseCompatPadding="true">

        <TextView
            style="@style/header_textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|center_horizontal"
            android:text="@string/select_your_category"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="8"
        android:elevation="4dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/option_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <RadioButton
                    android:id="@+id/naruto_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/naruto"
                    style="@style/header_textView"/>

                <RadioButton
                    android:id="@+id/death_note_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/death_note"
                  style="@style/header_textView"/>

                <RadioButton
                    android:id="@+id/one_piece_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/one_piece"
                    style="@style/header_textView"
                    />

                <RadioButton
                    android:id="@+id/one_punch_man_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/one_punch_man"
                    style="@style/header_textView"
                    />

                <RadioButton
                    android:id="@+id/dragonballz_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/dragonballz"
                    style="@style/header_textView"
                    />

            </RadioGroup>
        </ScrollView>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/start_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:backgroundTint="@android:color/holo_purple"
            android:padding="10dp"
            android:text="@string/start_quiz"/>
    </LinearLayout>

</LinearLayout>