<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="6"
    tools:context="com.example.shubham.animemania.login.LoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_double"
        android:orientation="vertical">
        <EditText
            android:id="@+id/new_user_name_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_username"
            android:inputType="text|textAutoCorrect"
            android:lines="1"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/new_name_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:lines="1"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/new_user_password_edit_Text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:lines="1"/>
    </LinearLayout>
</ScrollView>

    <include
        layout="@layout/avatar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/register_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:backgroundTint="@android:color/holo_purple"
            android:elevation="4dp"
            android:visibility="gone"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>