<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    tools:context="com.example.shubham.animemania.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_imageView"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="3">

        <EditText
            android:id="@+id/user_name_editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:lines="1"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/user_password_edit_Text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:lines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical|center|center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">


            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:elevation="4dp"
                android:fadingEdgeLength="2dp"
                android:shadowRadius="2"
                android:text="@string/login"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/want_to_register"
            android:textColor="@color/header_color"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:background="@android:color/holo_purple"
            android:backgroundTint="@android:color/holo_purple"
            android:elevation="4dp"

            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>